Moved Section 3.2 to Appendix

--- a/references.bib
+++ b/references.bib
@@ -2037,6 +2037,19 @@
   keywords = {Astrophysics - Solar and Stellar Astrophysics}
 }
 
+@article{Monteiro.Christensen-Dalsgaard.ea1994,
+  title = {Seismic Study of Overshoot at the Base of the Solar Convective Envelope},
+  author = {Monteiro, M. J. P. F. G. and {Christensen-Dalsgaard}, J. and Thompson, M. J.},
+  year = {1994},
+  month = mar,
+  volume = {283},
+  pages = {247--262},
+  issn = {0004-6361},
+  abstract = {Sharp transitions in the internal stratification of a star give rise to a characteristic signature in normal-mode frequencies. In particular, if in the Sun such a feature were located well inside the acoustic cavity of many solar p modes, it would give rise to a signal that was a periodic function of the frequency of the modes. We use this signature to detect the base of the solar convection zone and to investigate the existence of convective overshoot into the radiative interior. Two methods are considered. The 'absolute' method obtains the residuals in the frequencies after making a smooth fit in mode order n, and then uses an asymptotic description of the eigenfunctions to make a fit to the residuals. The 'differential' method makes an asymptotic fit to the differences between solar frequencies and the frequencies of a theoretical model. Various theoretical models of overshoot at the base of the convection zone predict the existence of a rather abrupt transition to subadiabatic stratification at the base of the overshoot region. We find no strong evidence for the existence of an overshoot region of this kind. Indeed if the overshoot consists of an essentially adiabatic extension of the convection zone followed by an abrupt transition to radiative stratification then we may (at the 95\% confidence level) put an upper limit of 0.07 local pressure scale heights on the extent of the overshoot layer.},
+  journal = {Astronomy and Astrophysics},
+  keywords = {Helioseismology,P Waves,Solar Convection (Astronomy),Solar Oscillations,Solar Physics,Stellar Envelopes,Stellar Models,Stellar Structure,Variational Principles}
+}
+
 @article{Monteiro.Christensen-Dalsgaard.ea2000,
   title = {Seismic Study of Stellar Convective Regions: The Base of the Convective Envelope in Low-Mass Stars},
   shorttitle = {Seismic Study of Stellar Convective Regions},
