Added suggested reference

--- a/references.bib
+++ b/references.bib
@@ -1047,6 +1047,20 @@
   keywords = {Atomic Data,Equation of State,Methods: Numerical,Molecular Data}
 }
 
+@article{Feuillet.Bovy.ea2016,
+  title = {Determining {{Ages}} of {{APOGEE Giants}} with {{Known Distances}}},
+  author = {Feuillet, Diane K. and Bovy, Jo and Holtzman, Jon and Girardi, L{\'e}o and MacDonald, Nick and Majewski, Steven R. and Nidever, David L.},
+  year = {2016},
+  month = jan,
+  volume = {817},
+  pages = {40},
+  issn = {0004-637X},
+  doi = {10.3847/0004-637X/817/1/40},
+  abstract = {We present a sample of 705 local giant stars observed using the New Mexico State University 1 m telescope with the Sloan Digital Sky Survey-III/Apache Point Observatory Galactic Evolution Experiment (APOGEE) spectrograph, for which we estimate stellar ages and the local star formation history (SFH). The high-resolution (R {$\sim$} 22,500), near infrared (1.51-1.7 {$\mu$}m) APOGEE spectra provide measurements of stellar atmospheric parameters (temperature, surface gravity, [M/H], and [{$\alpha$}/M]). Due to the smaller uncertainties in surface gravity possible with high-resolution spectra and accurate Hipparcos distance measurements, we are able to calculate the stellar masses to within 30\%. For giants, the relatively rapid evolution up the red giant branch allows the age to be constrained by the mass. We examine methods of estimating age using both the mass-age relation directly and a Bayesian isochrone matching of measured parameters, assuming a constant SFH. To improve the SFH prior, we use a hierarchical modeling approach to constrain the parameters of the model SFH using the age probability distribution functions of the data. The results of an {$\alpha$}-dependent Gaussian SFH model show a clear age-[{$\alpha$}/M] relation at all ages. Using this SFH model as the prior for an empirical Bayesian analysis, we determine ages for individual stars. The resulting age-metallicity relation is flat, with a slight decrease in [M/H] at the oldest ages and a {$\sim$}0.5 dex spread in metallicity across most ages. For stars with ages {$\lessequivlnt$}1 Gyr we find a smaller spread, consistent with radial migration having a smaller effect on these young stars than on the older stars.},
+  journal = {The Astrophysical Journal},
+  keywords = {Galaxy: disk,Galaxy: evolution,stars: abundances,stars: fundamental parameters}
+}
+
 @article{Foreman-Mackey.Hogg.ea2013,
   title = {Emcee: {{The MCMC Hammer}}},
   shorttitle = {Emcee},
