--- a/main.tex
+++ b/main.tex
@@ -160,7 +160,7 @@ asteroseismology -- stars: fundamental parameters -- stars: statistics
 
 The inference of stellar ages, masses, and radii has improved through the use of asteroseismology in recent years \citep[e.g. see the review by][]{Chaplin.Miglio2013}. Measuring the oscillation modes in stars using photometric time series data, from missions such as \emph{CoRoT} \citep{Baglin.Auvergne.ea2006}, \emph{Kepler} \citep{Borucki.Koch.ea2010}, and \emph{TESS} \citep{Ricker.Winn.ea2015} has given us new insights into the structure and evolution of stars \citep{Garcia.Ballot2019}. Recent examples include a deeper understanding of stellar structure \citep{Verma.Raodeo.ea2017}, chronology of a Milky Way merger \citep{Chaplin.Serenelli.ea2020}, and classifying exoplanetary systems \citep{Huber.Chaplin.ea2019, Tayar.Claytor.ea2020}. Several studies used grids of stellar models with constraints from asteroseismology to produce catalogues of precise stellar parameters \citep{Pinsonneault.Elsworth.ea2014, SilvaAguirre.Lund.ea2017}. However, with increasing precision on fundamental parameters inferred from stellar models with asteroseismology, extra care should be taken to ensure that we are accounting for uncertainty in our choice of stellar physics.
 
-Typically, stars are modelled on a star-by-star basis with estimates of stellar properties including some assumptions handled by simple scaling relations and solar calibrations. For instance, a helium ($Y$) to heavy-element ($Z$) enrichment ratio ($\Delta Y / \Delta Z$) and mixing-length theory (\textbf{\color{red} MLT}) parameter ($\mlt$) are often assumed. However, there has been little effort to account for the population distribution of such quantities. Assuming values for $Y$ and $\mlt$ can result in inaccurate inference and systematics on the inferred stellar parameters \citep{Valle.DellOmodarme.ea2015}. Independently modelling $Y$ and $\mlt$ can also be computationally demanding and requires high-precision observations in order to return meaningful stellar properties.
+Typically, stars are modelled on a star-by-star basis with estimates of stellar properties including some assumptions handled by simple scaling relations and solar calibrations. For instance, a helium ($Y$) to heavy-element ($Z$) enrichment ratio ($\Delta Y / \Delta Z$) and mixing-length theory parameter ($\mlt$) are often assumed. However, there has been little effort to account for the population distribution of such quantities. Assuming values for $Y$ and $\mlt$ can result in inaccurate inference and systematics on the inferred stellar parameters \citep{Valle.DellOmodarme.ea2015}. Independently modelling $Y$ and $\mlt$ can also be computationally demanding and requires high-precision observations in order to return meaningful stellar properties.
 
 In this work, we apply the method of Davies et al. (in prep.) to determine stellar properties for a sample of \emph{Kepler} dwarfs and subgiants using a hierarchical Bayesian model (HBM). With an HBM, we introduce population-level distributions for $Y$ and $\mlt$ to encode prior information throughout the sample. We will show that when an HBM is used, we can increase the precision of inferred masses, radii, and ages despite increasing the number of free parameters.
 
@@ -170,7 +170,7 @@ To describe the distribution of $Y$ in this work, we assume a linear helium enri
 
 % We assumed a linear helium enrichment law dependent only on theinitial heavy element abundance,푍init. However, helium enrichmentcould vary non-linearly depending on other chemical abundances(West & Heger 2013) or the location of the star in the Milky Way(Frebel 2010). Our model has the advantage of being adaptable todifferent population priors, stellar inputs, and observables. Futurework will explore the helium enrichment relation further, with theinclusion of metal-poor stars and a dependence on different chemicalabundances.
 
-The widely used \textbf{\color{red} MLT} of convection, parametrised by $\mlt$, has been tested throughout the Hertzsprung-Russell \textbf{\color{red} (HR)} diagram with 3D hydrodynamical simulations \citep{Trampedach.Stein.ea2014, Magic.Weiss.ea2015} and asteroseismology \citep{Tayar.Somers.ea2017, Viani.Basu.ea2018, Li.Bedding.ea2018} with values in the range $0.8 \lesssim \mlt/\alpha_{\mathrm{MLT}, \odot} \lesssim 1.2$ where $\alpha_{\mathrm{MLT}, \odot}$ is the value calibrated to the Sun. However, in many grids of stellar models, a constant value calibrated to reproduce the Sun is assumed. This can lead to systematic uncertainties in stellar ages due to the effects of variable mixing depending on the mixing length. \textbf{\color{red} The MLT approximates convective mixing and thus we expect the value of $\mlt$ to vary from star-to-star due to various effects, from changes in chemical composition to other sources of mixing described poorly by MLT. In this work, we experiment with two prior assumptions for $\mlt$ in the population. The first assumes $\mlt$ is normally distributed in our sample with a spread ($\sigma_\alpha$) to account for the aforementioned variation in $\mlt$. The second assumes $\mlt$ is constant throughout the sample. Given the quality and quantity of our data, the investigation of more complex $\mlt$ distributions is left to future work.}
+The widely used mixing-length theory \textbf{\color{red} (MLT)} of convection, parametrised by $\mlt$, has been tested throughout the Hertzsprung-Russell \textbf{\color{red} (HR)} diagram with 3D hydrodynamical simulations \citep{Trampedach.Stein.ea2014, Magic.Weiss.ea2015} and asteroseismology \citep{Tayar.Somers.ea2017, Viani.Basu.ea2018, Li.Bedding.ea2018} with values in the range $0.8 \lesssim \mlt/\alpha_{\mathrm{MLT}, \odot} \lesssim 1.2$ where $\alpha_{\mathrm{MLT}, \odot}$ is the value calibrated to the Sun. However, in many grids of stellar models, a constant value calibrated to reproduce the Sun is assumed. This can lead to systematic uncertainties in stellar ages due to the effects of variable mixing depending on the mixing length. \textbf{\color{red} The MLT approximates convective mixing and thus we expect the value of $\mlt$ to vary from star-to-star due to various effects, from changes in chemical composition to other sources of mixing described poorly by MLT. In this work, we experiment with two prior assumptions for $\mlt$ in the population. The first assumes $\mlt$ is normally distributed in our sample with a spread ($\sigma_\alpha$) to account for the aforementioned variation in $\mlt$. The second assumes $\mlt$ is constant throughout the sample. Given the quality and quantity of our data, the investigation of more complex $\mlt$ distributions is beyond the scope of this work.}
 
 % We assume that convection in stars of a sim-ilar mass, evolutionary stage and area of the HR diagram may beapproximated using a similar value of훼MLT, but the accuracy of the\textbf{\color{red} MLT} may vary from star-to-star. There is theoreticalevidence for such a variation with[M/H],푇eff, andlog푔in 3D hy-drodynamical stellar models (Magic et al. 2015; Viani et al. 2018).However, investigating such dependencies are beyond this scope ofthis paper. Given the small range of our sample, any such variationwill be absorbed by the spread parameter,휎훼.
 
