Added details of helium enrichment in the literature

--- a/main.tex
+++ b/main.tex
@@ -570,7 +570,7 @@ So far, we have shown that we can add parameters to stellar models without sacri
 
 \subsection{Helium enrichment}\label{sec:helium}
 
-We found the value for the helium enrichment ratio, $\Delta Y / \Delta Z$ to be the same in both the PP and MP models, $\Delta Y / \Delta Z = 1.6\substack{+0.5\\-0.4}$. This is consistent with values of $\sim 1.4$ in the literature for stellar models which include heavy element diffusion \textbf{\color{green}[Mention how these were obtained add Casagrande etc.]} \citep{Brogaard.VandenBerg.ea2012, Verma.Raodeo.ea2019}.
+We found the value for the helium enrichment ratio, $\Delta Y / \Delta Z$ to be the same in both the PP and MP models, $\Delta Y / \Delta Z = 1.6\substack{+0.5\\-0.4}$. \textbf{\color{red} This is consistent with values of $\sim 1.4$ in the literature (when heavy element diffusion is included) albeit obtained through different methods: e.g. measuring the metallicity and helium abundance of an open cluster and comparing with the primordial helium abundance \citep{Brogaard.VandenBerg.ea2012}, and fitting to helium abundances determined for \emph{Kepler} field stars using asteroseismology \citep{Verma.Raodeo.ea2019}.}
 
 When we added the Sun to the pooled models, PPS and MPS, obtained $\Delta Y / \Delta Z$ up to 2-$\sigma$ lower than the models without the Sun. In both models, the resulting $\Delta Y / \Delta Z$ of approximately \numrange{0.8}{1.0} was consistent with the initial helium fraction expected from solar models with our choice of \citet{Asplund.Grevesse.ea2009} abundances \citep{Serenelli.Basu2010}. However, such solar models have been shown to not recover helioseismic measurements of helium in the Sun \citep{Basu.Antia2004, Serenelli.Basu.ea2009, Villante.Serenelli.ea2014}. Solar models with the older \citet{Grevesse.Sauval1998} abundances typically yield higher helium fractions more in-line with helioseismology. The $\Delta Y / \Delta Z$ from the PP and MP models are higher than those including the Sun. We could extend our model to include asteroseismic indicators of helium to improve the uncertainties on $Y$ and test whether this difference becomes more significant.
 
