Update MLT intro with Hin's suggestion

--- a/main.tex
+++ b/main.tex
@@ -170,7 +170,7 @@ To describe the distribution of $Y$ in this work, we assume a linear helium enri
 
 % We assumed a linear helium enrichment law dependent only on theinitial heavy element abundance,푍init. However, helium enrichmentcould vary non-linearly depending on other chemical abundances(West & Heger 2013) or the location of the star in the Milky Way(Frebel 2010). Our model has the advantage of being adaptable todifferent population priors, stellar inputs, and observables. Futurework will explore the helium enrichment relation further, with theinclusion of metal-poor stars and a dependence on different chemicalabundances.
 
-The widely used mixing-length theory \textbf{\color{red} (MLT)} of convection, parametrised by $\mlt$, has been tested throughout the Hertzsprung-Russell \textbf{\color{red} (HR)} diagram with 3D hydrodynamical simulations \citep{Trampedach.Stein.ea2014, Magic.Weiss.ea2015} and asteroseismology \citep{Tayar.Somers.ea2017, Viani.Basu.ea2018, Li.Bedding.ea2018} with values in the range $0.8 \lesssim \mlt/\alpha_{\mathrm{MLT}, \odot} \lesssim 1.2$ where $\alpha_{\mathrm{MLT}, \odot}$ is the value calibrated to the Sun. However, in many grids of stellar models, a constant value calibrated to reproduce the Sun is assumed. This can lead to systematic uncertainties in stellar ages due to the effects of variable mixing depending on the mixing length. \textbf{\color{red} The MLT approximates convective mixing and thus we expect the value of $\mlt$ to vary from star-to-star due to various effects, from changes in chemical composition to other sources of mixing described poorly by MLT. In this work, we experiment with two prior assumptions for $\mlt$ in the population. The first assumes $\mlt$ is normally distributed in our sample with a spread ($\sigma_\alpha$) to account for the aforementioned variation in $\mlt$. The second assumes $\mlt$ is constant throughout the sample. Given the quality and quantity of our data, the investigation of more complex $\mlt$ distributions is beyond the scope of this work.}
+The widely used mixing-length theory \textbf{\color{red} (MLT)} of convection, parametrised by $\mlt$, has been tested throughout the Hertzsprung-Russell \textbf{\color{red} (HR)} diagram with 3D hydrodynamical simulations \citep{Trampedach.Stein.ea2014, Magic.Weiss.ea2015} and asteroseismology \citep{Tayar.Somers.ea2017, Viani.Basu.ea2018, Li.Bedding.ea2018} with values in the range $0.8 \lesssim \mlt/\alpha_{\mathrm{MLT}, \odot} \lesssim 1.2$ where $\alpha_{\mathrm{MLT}, \odot}$ is the value calibrated to the Sun. However, in many grids of stellar models, a constant value calibrated to reproduce the Sun is assumed. This can lead to systematic uncertainties in stellar ages due to the effects of variable mixing depending on the mixing length. \textbf{\color{red} The MLT approximates convective mixing and thus we expect the value of $\mlt$ to vary from star-to-star due to various effects, from changes in chemical composition to other sources of mixing described poorly by MLT. The investigation of more complex $\mlt$ distributions is beyond the scope of this work. Instead, we experiment with two prior assumptions for $\mlt$ in the population. The first assumes $\mlt$ is normally distributed in our sample with a spread ($\sigma_\alpha$) to account for the aforementioned variation in $\mlt$. The second assumes $\mlt$ is constant throughout the sample.}
 
 % We assume that convection in stars of a sim-ilar mass, evolutionary stage and area of the HR diagram may beapproximated using a similar value of훼MLT, but the accuracy of the\textbf{\color{red} MLT} may vary from star-to-star. There is theoreticalevidence for such a variation with[M/H],푇eff, andlog푔in 3D hy-drodynamical stellar models (Magic et al. 2015; Viani et al. 2018).However, investigating such dependencies are beyond this scope ofthis paper. Given the small range of our sample, any such variationwill be absorbed by the spread parameter,휎훼.
 
