--- a/main.tex
+++ b/main.tex
@@ -689,7 +689,7 @@ This work is a part of a project that has received funding from the European Res
 
 %%%%%%%%%%%%%%% DATA AVAILABILITY %%%%%%%%%%%%%%%%
 
-The data underlying this article are available in the article, in its online supplementary material, and in Zenodo, at https://dx.doi.org/[doi to be published upon acceptance].
+The data underlying this article are available in the article, in its online supplementary material, and in Zenodo, at \url{https://dx.doi.org/10.5281/zenodo.4746353}.
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
