Update references with addresses

--- a/references.bib
+++ b/references.bib
@@ -193,7 +193,8 @@
   year = {2006},
   month = jan,
   volume = {36},
-  pages = {3749}
+  pages = {3749},
+  address = {{Beijing}, {China}}
 }
 
 @article{Bahcall.Pinsonneault.ea1995,
@@ -1228,7 +1229,8 @@
   title = {Deep Learning},
   author = {Goodfellow, Ian and Bengio, Yoshua and Courville, Aaron},
   year = {2016},
-  publisher = {{MIT Press}}
+  publisher = {{MIT Press}},
+  address = {{Cambridge}, {MA}}
 }
 
 @article{Gough1977,
@@ -1357,7 +1359,7 @@
   author = {Haykin, Simon},
   year = {2007},
   publisher = {{Prentice-Hall, Inc.}},
-  address = {{USA}},
+  address = {{Upper Saddle River}, {NJ}},
   isbn = {0-13-147139-2}
 }
 
